navbar spacing fixed

--- a/hera-real-state/src/components/Navbar.css
+++ b/hera-real-state/src/components/Navbar.css
@@ -1,19 +1,21 @@
 .navbar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: azure;
     background-color: #253B44;
+    padding: 0 3rem;
 }
 ul {
     display: flex;
-    justify-content:end;
+    justify-content:space-between;
     align-items: center;
-    margin: 0 2rem;    
+    margin: rem;    
 }
 
 li {
     list-style: none;
-    margin: 2rem;
+    margin-left: 1.5rem;
 }
 
 a{
@@ -22,5 +24,5 @@ a{
 }
 
 img {
-    height: 15vh;
+    height: 3.5vh;
 }
