--- a/hera-real-state/src/index.css
+++ b/hera-real-state/src/index.css
@@ -6,3 +6,11 @@ body {
   background-color: azure;
 }
 
+.primary-color {
+  color: #253B44;
+}
+
+.secondary-color {
+  color: azure;
+}
+
